--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
             </div>
             <div class="input-group">
                 <input type="password" id="password" autocomplete="off" placeholder="Password" required>
+                <input type="checkbox" onclick="myFunction()">
             </div>
             
                 <button type="submit">Enter</button>
