--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,9 @@
             </div>
             
                 <button type="submit">Enter</button>
+                <button type="submit" onclick="window.location.href='register.html';">Register</button>
+                <button type="submit" onclick="window.location.href='generate_qr.html';">Generate QR Code</button>
+
         </form>
         <p id="message"></p>
         <button id="instructions-btn">❔ Instructions</button>
