modified:   public/scan.js 	modified:   public/vote.html 	modified:   public/vote.js 	modified:   routes/voter.js

--- a/public/vote.html
+++ b/public/vote.html
@@ -25,7 +25,7 @@
         font-size: 24px;
         color: #333;
         padding: 20px;
-        background-color: #ffffff;
+        background-color: beige;
         width: 100%;
         text-align: center;
         box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
@@ -127,7 +127,7 @@
     }
 
     label:active {
-        background-color: #e2ff93;
+        background-color: beige;
     }
 
 
