--- a/public/register.html
+++ b/public/register.html
@@ -8,7 +8,7 @@
 <body>
     <div class="login-container">
     <h2>Registration Form</h2>
-    <form id="registerForm">
+    <form id="login-form>
         <input type="text" id="username" placeholder="Username" required><br>
         <input type="text" id="aadharNo" placeholder="Aadhar Number" required><br>
         <input type="date" id="dob" placeholder="Date of Birth" max="2007-12-31" required><br>
