--- a/public/register.html
+++ b/public/register.html
@@ -8,13 +8,19 @@
 <body>
     <div class="login-container">
     <h2>Registration Form</h2>
-    <form id="login-form>
-        <input type="text" id="username" placeholder="Username" required><br>
-        <input type="text" id="aadharNo" placeholder="Aadhar Number" required><br>
-        <input type="date" id="dob" placeholder="Date of Birth" max="2007-12-31" required><br>
-        <input type="password" id="password" placeholder="Password" required><br>
-        <input type="password" id="re-password" placeholder="Re-enter Password" required><br>
-        <button type="submit">Register</button>
+    <form id="login-form">
+        <div class="input-group">
+        <input type="text" id="username" placeholder="Username" required></div>
+        <div class="input-group">
+        <input type="text" id="aadharNo" placeholder="Aadhar Number" required></div>
+        <div class="input-group">
+        <input type="date" id="dob" placeholder="Date of Birth" max="2007-12-31" required></div>
+        <div class="input-group">
+        <input type="password" id="password" placeholder="Password" required></div>
+        <div class="input-group">
+        <input type="password" id="re-password" placeholder="Re-enter Password" required></div>
+        <div class="input-group">
+        <button type="submit">Register</button></div>
         <p id="message"></p>
     </form>
     </div>
