--- a/public/register.html
+++ b/public/register.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Registration</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -24,9 +25,52 @@
         <p id="message"></p>
     </form>
     </div>
+    <div id="instructions-modal" class="modal">
+        <div class="modal-content">
+            <span class="close-btn" id="close-instructions">&times;</span>
+            <h3>Instructions</h3>
+            <p>Check the details properly before enterring</p>
+        </div>
+    </div>
+    <div class="help-box">
+        <button id="help-btn" >help</button>
+        <div class="help-content" id="help-content">
+            <h3>Need Help?</h3>
+            <p>📞 Contact details </p>
+            <p>💡 Common Questions</p>
+        </div>
+    </div>
+    <script>
+        const helpBtn = document.getElementById('help-btn');
+        const helpBox = document.querySelector('.help-box');
+
+        helpBtn.addEventListener('click', () => {
+            helpBox.classList.toggle('active');
+        });
+
+        // Instructions Modal
+        const instructionsBtn = document.getElementById('instructions-btn');
+        const instructionsModal = document.getElementById('instructions-modal');
+        const closeInstructions = document.getElementById('close-instructions');
+
+        instructionsBtn.addEventListener('click', () => {
+            instructionsModal.style.display = 'flex';
+        });
+
+        closeInstructions.addEventListener('click', () => {
+            instructionsModal.style.display = 'none';
+        });
+
+        window.addEventListener('click', (e) => {
+            if (e.target === instructionsModal) {
+                instructionsModal.style.display = 'none';
+            }
+        });
+    </script>
 
     <script src="register.js"></script>
     <canvas id="dotCanvas" style="z-index: -1; display:block;position: fixed; user-select: none; background-color: bisque;"></canvas>
     <script src="canvas.js"></script>
+
 </body>
 </html>
