modified:   public/register.html

--- a/public/register.html
+++ b/public/register.html
@@ -15,7 +15,7 @@
         <div class="input-group">
         <input type="text" id="aadharNo" placeholder="Aadhar Number" required></div>
         <div class="input-group">
-        <input type="date" id="dob" placeholder="Date of Birth" max="2007-12-31" required></div>
+        <input type="date" id="dob" placeholder="dd-mm-yyyy" min="1950-01-26" max="2007-01-01" required></div>
         <div class="input-group">
         <input type="password" id="password" placeholder="Password" required></div>
         <div class="input-group">
