modified:   public/register.html

--- a/public/register.html
+++ b/public/register.html
@@ -11,7 +11,7 @@
     <h2>Registration Form</h2>
     <form id="login-form">
         <div class="input-group">
-        <label for="username> Username:
+        <label for="username"> Username:
         <input type="text" id="username" placeholder="Username" required></label></div>
         <div class="input-group">
         <label for="aadhaar">Aadhaar Number :
