modified:   public/register.html

--- a/public/register.html
+++ b/public/register.html
@@ -12,19 +12,19 @@
     <form id="login-form">
         <div class="input-group">
         <label for="username"> Username:
-        <input type="text" id="username" placeholder="Username" required></label></div>
+        <input type="text" id="username" placeholder="Username" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" required></label></div>
         <div class="input-group">
         <label for="aadhaar">Aadhaar Number :
-        <input type="text" id="aadharNo" placeholder="xxxx-xxxx-xxxx" required></label></div>
+        <input type="text" id="aadharNo" placeholder="xxxx-xxxx-xxxx" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" required></label></div>
         <div class="input-group">
         <label for="dob">Date of Birth :
-        <input type="date" id="dob" placeholder="dd-mm-yyyy" min="1900-01-26" max="2007-01-01" required></label></div>
+        <input type="date" id="dob" placeholder="dd-mm-yyyy" min="1900-01-26" max="2007-01-01" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" required></label></div>
         <div class="input-group">
         <label for="Password">Enter a secure password
-        <input type="password" id="password" placeholder="Password" required></label></div>
+        <input type="password" id="password" placeholder="Password" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" required></label></div>
         <div class="input-group">
         <label for="Password">Re-Enter the same password
-        <input type="password" id="re-password" placeholder="Re-enter Password" required></label></div>
+        <input type="password" id="re-password" placeholder="Re-enter Password" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" required></label></div>
         <div class="input-group">
         <button type="submit">Register</button></div>
         <p id="message"></p>
