--- a/public/register.html
+++ b/public/register.html
@@ -15,7 +15,7 @@
         <input type="text" id="username" placeholder="Username" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" required></label></div>
         <div class="input-group">
         <label for="aadhaar">Aadhaar Number :
-        <input type="text" id="aadharNo" placeholder="xxxx-xxxx-xxxx" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" required></label></div>
+        <input type="text" id="aadharNo" placeholder="xxxx-xxxx-xxxx" pattern="\d{4}-\d{4}-\d{4}" maxlength="14" minlength="14" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" required></label></div>
         <div class="input-group">
         <label for="dob">Date of Birth :
         <input type="date" id="dob" placeholder="dd-mm-yyyy" min="1900-01-26" max="2007-01-01" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" required></label></div>
@@ -46,24 +46,7 @@
             helpBox.classList.toggle('active');
         });
 
-        // Instructions Modal
-        const instructionsBtn = document.getElementById('instructions-btn');
-        const instructionsModal = document.getElementById('instructions-modal');
-        const closeInstructions = document.getElementById('close-instructions');
 
-        instructionsBtn.addEventListener('click', () => {
-            instructionsModal.style.display = 'flex';
-        });
-
-        closeInstructions.addEventListener('click', () => {
-            instructionsModal.style.display = 'none';
-        });
-
-        window.addEventListener('click', (e) => {
-            if (e.target === instructionsModal) {
-                instructionsModal.style.display = 'none';
-            }
-        });
     </script>
 
     <script src="register.js"></script>
