--- a/public/register.html
+++ b/public/register.html
@@ -26,7 +26,7 @@
         <label for="Password">Re-Enter the same password
         <input type="password" id="re-password" placeholder="Re-enter Password" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" required></label></div>
         <div class="input-group">
-        <button type="submit">Register</button></div>
+        <button type="submit" id="submitBtn">Register</button></div>
         <p id="message"></p>
     </form>
     </div>
