--- a/public/register.html
+++ b/public/register.html
@@ -27,7 +27,7 @@
         <input type="password" id="re-password" placeholder="Re-enter Password" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" required></label></div>
         <div class="input-group">
         <button type="submit" id="submitBtn">Register</button></div>
-        <a href="/"><button type="button" class="submit-button">Login</button></a>
+        <a href="/"><button type="button">Login</button></a>
         <p id="message"></p>
     </form>
     </div>
