Please enter the commit message for your changes. Lines starting  with '' will be ignored, and an empty message aborts the commit.
 On branch main
 Your branch is up to date with 'origin/main'.

 Changes to be committed:
	modified:   api/index.js
	modified:   public/admin.html
	modified:   public/capture.html
	renamed:    public/style.css -> public/css/style.css
	modified:   public/final.html
	modified:   public/generate_qr.html
	modified:   public/index.html
	modified:   public/register.html
	modified:   public/scan.html
	renamed:    public/admin.js -> public/scripts/admin.js
	renamed:    public/canvas.js -> public/scripts/canvas.js
	renamed:    public/captcha.js -> public/scripts/captcha.js
	renamed:    public/generateQR.js -> public/scripts/generateQR.js
	renamed:    public/register.js -> public/scripts/register.js
	renamed:    public/scan.js -> public/scripts/scan.js
	renamed:    public/script.js -> public/scripts/script.js
	renamed:    public/verify.js -> public/scripts/verify.js
	renamed:    public/vote.js -> public/scripts/vote.js
	modified:   public/verify.html
	modified:   public/vote.html

--- a/public/admin.html
+++ b/public/admin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Panel</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
@@ -28,8 +28,7 @@
             <ul id="candidate-display"></ul>
         </div>
     </div>
-    <canvas id="dotCanvas" style="z-index: -1; display:block;position: fixed; user-select: none; background-color: bisque;"></canvas>
-    <script src="canvas.js"></script>
+    <canvas id="dotCanvas" style="z-index: -1; display:block;position: fixed; user-select: none; background-color: bisque;"></canvas>    
 
     <script>
         // Load Candidates
@@ -107,7 +106,8 @@
         }
 
         // Load Candidates on Page Load
-        document.addEventListener('DOMContentLoaded', loadCandidates);
+        document.addEventListener('DOMContentLoaded', loadCandidates);    
     </script>
+    <script src="scripts/canvas.js"></script>
 </body>
 </html>
