--- a/public/capture.html
+++ b/public/capture.html
@@ -3,30 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Capture Photo</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-        }
-        video, canvas, img {
-            width: 100%;
-            max-width: 350px;
-            margin-bottom: 10px;
-        }
-        button {
-            padding: 8px 16px;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            cursor: pointer;
-            border-radius: 4px;
-            margin: 5px;
-        }
-        button:hover {
-            background-color: #45a049;
-        }
-    </style>
+
+
 </head>
 <body>
 
