--- a/public/final.html
+++ b/public/final.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thank You</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body style="font-family: 'Courier New', Courier, monospace; background-color: bisque;">
 
@@ -15,7 +15,7 @@
     </div>
 
     <canvas id="dotCanvas" style="z-index: -1; display:block; position: fixed; user-select: none; background-color: bisque;"></canvas>
-    <script src="canvas.js"></script>
+    <script src="scripts/canvas.js"></script>
     <script>
         history.pushState(null, null, window.location.href);
         window.addEventListener('popstate', () => {
