--- a/public/generate_qr.html
+++ b/public/generate_qr.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QR Code Generator</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <style>
@@ -28,8 +28,8 @@
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/qrious/4.0.2/qrious.min.js"></script>
-<script src="generateQR.js"></script>
+<script src="scripts/generateQR.js"></script>
 <canvas id="dotCanvas" style="z-index: -1; display:block;position: fixed; user-select: none; background-color: bisque;"></canvas>
-<script src="canvas.js"></script>
+<script src="scripts/canvas.js"></script>
 </body>
 </html>
