--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign In</title>
-    <link rel="stylesheet" href="style.css">
-    
+    <link rel="stylesheet" href="css/style.css">
+    <style>
+        #welcome-screen {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: #f8f9fa;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            z-index: 1000;
+        }
+
+        #welcome-text {
+            font-size: 3rem;
+            margin-bottom: 20px;
+        }
+
+        #language-selector {
+            padding: 10px;
+            font-size: 1.2rem;
+        }
+
+        .hidden {
+            display: none;
+        }
+    </style>
 </head>
 <body style="font-family: 'Courier New', Courier, monospace; ">
-    <div class="login-container">
+    <div id="welcome-screen">
+        <div id="welcome-text">Welcome to Neutrino</div>
+        <select id="language-selector">
+            <option value="">Select Language</option>
+            <option value="Hindi">Hindi</option>
+            <option value="English">English</option>
+            <option value="Bengali">Bengali</option>
+            <option value="Telugu">Telugu</option>
+            <option value="Tamil">Tamil</option>
+            <option value="Marathi">Marathi</option>
+            <option value="Urdu">Urdu</option>
+            <option value="Gujarati">Gujarati</option>
+            <option value="Kannada">Kannada</option>
+            <option value="Odia">Odia</option>
+            <option value="Punjabi">Punjabi</option>
+        </select>
+    </div>
+
+    <div class="login-container hidden" id="login-container">
         <h2 style="background-color: beige; width:100% ">नमस्ते</h2>       
         <form id="login-form" >
             <div class="input-group">
@@ -24,55 +70,26 @@
                 <button type="submit" onclick="window.location.href='register.html';">Register</button>
                 <button type="submit" onclick="window.location.href='generate_qr.html';">Generate QR Code</button>
 
-        </form>
-        <p id="message"></p>
-        <button id="instructions-btn">❔ Instructions</button>
-    </div>
-    <canvas id="dotCanvas" style="z-index: -1; display:block;position: fixed; user-select: none; background-color: bisque;"></canvas>
-    <script src="canvas.js"></script>
-    <script src="script.js"></script>
-    <div id="instructions-modal" class="modal">
-        <div class="modal-content">
-            <span class="close-btn" id="close-instructions">&times;</span>
-            <h3>Instructions</h3>
-            <p>Check the details properly before enterring</p>
+            </form>
         </div>
-    </div>
-    <div class="help-box">
-        <button id="help-btn" >help</button>
-        <div class="help-content" id="help-content">
-            <h3>Need Help?</h3>
-            <p>📞 Contact details </p>
-            <p>💡 Common Questions</p>
+        <canvas id="dotCanvas" style="z-index: -1; display:block;position: fixed; user-select: none; background-color: bisque;"></canvas>
+            <script src="scripts/canvas.js"></script>
+            <script src="scripts/script.js"></script>
         </div>
-    </div>
+    </body>
+    </html>
+
     <script>
-        const helpBtn = document.getElementById('help-btn');
-        const helpBox = document.querySelector('.help-box');
-
-        helpBtn.addEventListener('click', () => {
-            helpBox.classList.toggle('active');
-        });
-
-        // Instructions Modal
-        const instructionsBtn = document.getElementById('instructions-btn');
-        const instructionsModal = document.getElementById('instructions-modal');
-        const closeInstructions = document.getElementById('close-instructions');
-
-        instructionsBtn.addEventListener('click', () => {
-            instructionsModal.style.display = 'flex';
-        });
-
-        closeInstructions.addEventListener('click', () => {
-            instructionsModal.style.display = 'none';
-        });
-
-        window.addEventListener('click', (e) => {
-            if (e.target === instructionsModal) {
-                instructionsModal.style.display = 'none';
+        document.getElementById('language-selector').addEventListener('change', function() {
+            if (this.value) {
+                document.getElementById('welcome-screen').classList.add('hidden');
+                document.getElementById('login-container').classList.remove('hidden');
             }
         });
-    </script>
-    
+    </script>    
+    <canvas id="dotCanvas" style="z-index: -1; display:block;position: fixed; user-select: none; background-color: bisque;"></canvas>
+        <script src="scripts/canvas.js"></script>
+        <script src="scripts/script.js"></script>
+    </div>
 </body>
 </html>
