--- a/public/register.html
+++ b/public/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Registration</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="login-container" style="height:100vh">
@@ -49,9 +49,9 @@
 
     </script>
 
-    <script src="register.js"></script>
+    <script src="scripts/register.js"></script>
     <canvas id="dotCanvas" style="z-index: -1; display:block;position: fixed; user-select: none; background-color: bisque;"></canvas>
-    <script src="canvas.js"></script>
+    <script src="scripts/canvas.js"></script>
 
 </body>
 </html>
