--- a/public/scan.html
+++ b/public/scan.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scan & Capture</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <style>
@@ -72,9 +72,9 @@
     </div>
 </div>
 <canvas id="dotCanvas" style="z-index: -1; display:block;position: fixed; user-select: none; background-color: bisque;"></canvas>
-<script src="canvas.js"></script>
+<script src="scripts/canvas.js"></script>
 
-<script src="scan.js"></script>
+<script src="scripts/scan.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/jsqr/dist/jsQR.js"></script>
 </body>
 </html>
