--- a/public/verify.html
+++ b/public/verify.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Voter Verification</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
@@ -45,8 +45,8 @@
     </div>
 </div>
 <canvas id="dotCanvas" style="z-index: -1; display:block;position: fixed; user-select: none; background-color: bisque;"></canvas>
-<script src="canvas.js"></script>
+<script src="scripts/canvas.js"></script>
 
-<script src="verify.js"></script>
+<script src="scripts/verify.js"></script>
 </body>
 </html>
