--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: #f8f9fa;
+            background-color: beige;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -23,6 +23,8 @@
         #welcome-text {
             font-size: 3rem;
             margin-bottom: 20px;
+            justify-content: center;
+            position: absolute;
         }
 
         #language-selector {
@@ -34,7 +36,7 @@
             display: none;
         }
     </style>
-</head>
+</head>z
 <body style="font-family: 'Courier New', Courier, monospace; ">
     <div id="welcome-screen">
         <div id="welcome-text">Welcome to Neutrino</div>
@@ -72,18 +74,8 @@
 
         </form>
     </div>
-    <canvas id="dotCanvas" style="z-index: -1; display:block;position: fixed; user-select: none; background-color: bisque;"></canvas>
-            <script src="scripts/canvas.js"></script>
-            <script src="scripts/script.js"></script>
-        </div>
+    <canvas id="dotCanvas" style="z-index: -1; display:block;position: fixed; user-select: none; background-color: bisque;"></canvas></div>
+    <script src="scripts/canvas.js"></script>
+    <script src="scripts/script.js"></script>
     </body>
     </html>
-
-    <script>
-        document.getElementById('language-selector').addEventListener('change', function() {
-            if (this.value) {
-                document.getElementById('welcome-screen').classList.add('hidden');
-                document.getElementById('login-container').classList.remove('hidden');
-            }
-        });
-    </script>
