--- a/public/index.html
+++ b/public/index.html
@@ -5,60 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign In</title>
     <link rel="stylesheet" href="css/style.css">
-    <style>
-        #welcome-screen {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: beige;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            z-index: 1000;
-        }
-
-        #welcome-text {
-            font-size: 3rem;
-            margin-bottom: 20px;
-            justify-content: center;
-            position: absolute;
-        }
-
-        #language-selector {
-            padding: 10px;
-            font-size: 1.2rem;
-        }
-
-        .hidden {
-            display: none;
-        }
-    </style>
-</head>z
-<body style="font-family: 'Courier New', Courier, monospace; ">
+</head>
+<body>
     <div id="welcome-screen">
         <div id="welcome-text">Welcome to Neutrino</div>
-        <select id="language-selector">
-            <option value="">Select Language</option>
-            <option value="Hindi">Hindi</option>
-            <option value="English">English</option>
-            <option value="Bengali">Bengali</option>
-            <option value="Telugu">Telugu</option>
-            <option value="Tamil">Tamil</option>
-            <option value="Marathi">Marathi</option>
-            <option value="Urdu">Urdu</option>
-            <option value="Gujarati">Gujarati</option>
-            <option value="Kannada">Kannada</option>
-            <option value="Odia">Odia</option>
-            <option value="Punjabi">Punjabi</option>
-        </select>
+            <button class="language-option" data-language="Hindi">Hindi</button>
+            <button class="language-option" data-language="English">English</button>
+            <button class="language-option" data-language="Bengali">Bengali</button>
+            <button class="language-option" data-language="Telugu">Telugu</button>
+            <button class="language-option" data-language="Tamil">Tamil</button>
+            <button class="language-option" data-language="Marathi">Marathi</button>
+            <button class="language-option" data-language="Urdu">Urdu</button>
+            <button class="language-option" data-language="Gujarati">Gujarati</button>
+            <button class="language-option" data-language="Kannada">Kannada</button>
+            <button class="language-option" data-language="Odia">Odia</button>
+            <button class="language-option" data-language="Punjabi">Punjabi</button>
     </div>
 
     <div class="login-container hidden" id="login-container">
-        <h2 style="background-color: beige; width:100% ">नमस्ते</h2>       
-        <form id="login-form" >
+        <h2>नमस्ते</h2>
+        <form id="login-form">
             <div class="input-group">
 
                 <input type="text" id="username" class="login-input" autocomplete="off" placeholder="User ID" style="margin-top: 10%;" required>
@@ -67,15 +33,14 @@
                 <input type="password" id="password" autocomplete="off" placeholder="Password" required>
                 <input type="checkbox" onclick="myFunction()">
             </div>
-            
-                <button type="submit">Enter</button>
-                <button type="submit" onclick="window.location.href='register.html';">Register</button>
-                <button type="submit" onclick="window.location.href='generate_qr.html';">Generate QR Code</button>
+            <button type="submit">Enter</button>
+            <button type="button" onclick="window.location.href='register.html';">Register</button>
+            <button type="button" onclick="window.location.href='generate_qr.html';">Generate QR Code</button>
 
         </form>
     </div>
-    <canvas id="dotCanvas" style="z-index: -1; display:block;position: fixed; user-select: none; background-color: bisque;"></canvas></div>
+    <canvas id="dotCanvas"></canvas>
     <script src="scripts/canvas.js"></script>
     <script src="scripts/script.js"></script>
-    </body>
-    </html>
+</body>
+</html>
