--- a/public/index.html
+++ b/public/index.html
@@ -9,17 +9,21 @@
 <body>
     <div id="welcome-screen">
         <div id="welcome-text">Welcome to Neutrino</div>
-            <button class="language-option" data-language="Hindi">Hindi</button>
-            <button class="language-option" data-language="English">English</button>
-            <button class="language-option" data-language="Bengali">Bengali</button>
-            <button class="language-option" data-language="Telugu">Telugu</button>
-            <button class="language-option" data-language="Tamil">Tamil</button>
-            <button class="language-option" data-language="Marathi">Marathi</button>
-            <button class="language-option" data-language="Urdu">Urdu</button>
-            <button class="language-option" data-language="Gujarati">Gujarati</button>
-            <button class="language-option" data-language="Kannada">Kannada</button>
-            <button class="language-option" data-language="Odia">Odia</button>
-            <button class="language-option" data-language="Punjabi">Punjabi</button>
+        <select id="language-selector">
+            <option value="">Select Language</option>
+            <option value="Hindi">Hindi</option>
+            <option value="English">English</option>
+            <option value="Bengali">Bengali</option>
+            <option value="Telugu">Telugu</option>
+            <option value="Tamil">Tamil</option>
+            <option value="Marathi">Marathi</option>
+            <option value="Urdu">Urdu</option>
+            <option value="Gujarati">Gujarati</option>
+            <option value="Kannada">Kannada</option>
+            <option value="Odia">Odia</option>
+            <option value="Punjabi">Punjabi</option>
+        </select>
+        <button type="button" id="select-language">Select</button>
     </div>
 
     <div class="login-container hidden" id="login-container">
