modified:   public/index.html

--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
 
         </form>
     </div>
-    <canvas id="dotCanvas"></canvas>
+    <canvas id="dotCanvas" style="z-index: -1; display:block; position: fixed; user-select: none; background-color: bisque;"></canvas>
     <script src="scripts/canvas.js"></script>
     <script src="scripts/script.js"></script>
 </body>
