Changes to be committed: 	modified:   public/index.html

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign In</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     
 </head>
 <body style="font-family: 'Courier New', Courier, monospace; ">
@@ -47,8 +47,8 @@
         <button id="instructions-btn">❔ Instructions</button>
     </div>
     <canvas id="dotCanvas" style="z-index: -1; display:block;position: fixed; user-select: none; background-color: bisque;"></canvas>
-    <script src="canvas.js"></script>
-    <script src="script.js"></script>
+    <script src="scripts/canvas.js"></script>
+    <script src="scripts/script.js"></script>
     <div id="instructions-modal" class="modal">
         <div class="modal-content">
             <span class="close-btn" id="close-instructions">&times;</span>
