modified:   public/index.html

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     
 </head>
 <body style="font-family: 'Courier New', Courier, monospace; ">
-    <div id="welcome-screen">
+    <div id="welcome-screen" style="background-color: black; border-radius: 5%;">
         <div id="welcome-text">Welcome to Neutrino</div>
         <select id="language-selector">
             <option value="">Select Language</option>
