--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     
 </head>
 <body style="font-family: 'Courier New', Courier, monospace; ">
-    <div id="welcome-screen" style="background-color: black; border-radius: 5%;">
+    <div id="welcome-screen" style="background-color: whitesmoke">
         <div id="welcome-text">Welcome to Neutrino</div>
         <select id="language-selector">
             <option value="">Select Language</option>
@@ -24,7 +24,7 @@
             <option value="Odia">Odia</option>
             <option value="Punjabi">Punjabi</option>
         </select>
-        <button type="button" id="select-language">Select</button>
+        <button type="button-language" id="select-language">Select</button>
     </div>
     <div class="login-container hidden" id="login-container">
         <h2 style="background-color: beige; width:100% ">नमस्ते</h2>       
