--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 <body style="font-family: 'Courier New', Courier, monospace; ">
     <div id="welcome-screen" style="background-color: whitesmoke">
         <div id="welcome-text">Welcome to Neutrino</div>
-        <select id="language-selector">
+        <select id="language-selector" required>
             <option value="">Select Language</option>
             <option value="Hindi">Hindi</option>
             <option value="English">English</option>
