--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
         <p id="message"></p>
         <button id="instructions-btn">❔ Instructions</button>
     </div>
-    <canvas id="dotCanvas" style="z-index: -1; display:block;position: fixed; user-select: none; background-color: bisque;"></canvas>
+    <canvas id="dotCanvas" style="z-index: -1; display:block;position: fixed; user-select: none; background-color: beige;"></canvas>
     <script src="scripts/canvas.js"></script>
     <script src="scripts/script.js"></script>
     <div id="instructions-modal" class="modal">
