Changes to be committed: 	modified:   public/register.html 	modified:   public/scan.html 	modified:   public/scripts/canvas.js 	modified:   public/verify.html 	modified:   public/vote.html

--- a/public/register.html
+++ b/public/register.html
@@ -50,7 +50,7 @@
     </script>
 
     <script src="scripts/register.js"></script>
-    <canvas id="dotCanvas" style="z-index: -1; display:block;position: fixed; user-select: none; background-color: bisque;"></canvas>
+    <canvas id="dotCanvas" style="z-index: -1; display:block;position: fixed; user-select: none; background-color: beige;"></canvas>
     <script src="scripts/canvas.js"></script>
 
 </body>
