--- a/public/vote.html
+++ b/public/vote.html
@@ -170,7 +170,7 @@
             </button>
         </form>
     </div>
-    <canvas id="dotCanvas" style="z-index: -1; display:block;position: fixed; user-select: none; background-color: bisque;"></canvas>
+    <canvas id="dotCanvas" style="z-index: -1; display:block;position: fixed; user-select: none; background-color: beige;"></canvas>
     <script src="canvas.js"></script>
     <script src="scripts/vote.js" defer></script>
 </body>
