--- a/public/verify.html
+++ b/public/verify.html
@@ -44,7 +44,7 @@
         </div>
     </div>
 </div>
-<canvas id="dotCanvas" style="z-index: -1; display:block;position: fixed; user-select: none; background-color: bisque;"></canvas>
+<canvas id="dotCanvas" style="z-index: -1; display:block;position: fixed; user-select: none; background-color: beige;"></canvas>
 <script src="scripts/canvas.js"></script>
 
 <script src="scripts/verify.js"></script>
