Changes to be committed: 	modified:   README.md 	modified:   public/css/style.css 	modified:   public/generate_qr.html

--- a/public/generate_qr.html
+++ b/public/generate_qr.html
@@ -29,7 +29,7 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/qrious/4.0.2/qrious.min.js"></script>
 <script src="scripts/generateQR.js"></script>
-<canvas id="dotCanvas" style="z-index: -1; display:block;position: fixed; user-select: none; background-color: bisque;"></canvas>
+<canvas id="dotCanvas" style="z-index: -1; display:block;position: fixed; user-select: none; background-color: beige;"></canvas>
 <script src="scripts/canvas.js"></script>
 </body>
 </html>
