--- a/public/index.html
+++ b/public/index.html
@@ -24,18 +24,18 @@
             <option value="Odia">Odia</option>
             <option value="Punjabi">Punjabi</option>
         </select>
-        <button type="button-language" id="select-language">Select</button>
+        <button type="button-language" id="select-language" style="margin-top: 10%;">Proceed</button>
     </div>
     <div class="login-container hidden" id="login-container">
         <h2 style="background-color: beige; width:100% ">नमस्ते</h2>       
         <form id="login-form" >
             <div class="input-group">
 
-                <input type="text" id="username" class="login-input" autocomplete="off" placeholder="User ID" style="margin-top: 10%;" required>
+                <input type="text" id="username" class="login-input" autocomplete="off" placeholder="Voter ID" style="margin-top: 10%;" required>
             </div>
             <div class="input-group">
-                <input type="password" id="password" autocomplete="off" placeholder="Password" required>
-                <input type="checkbox" onclick="myFunction()">
+                <input type="password" id="password" autocomplete="off" placeholder="Password" required >
+                <input type="checkbox" onclick="myFunction()">Show Password
             </div>
             
                 <button type="submit">Enter</button>
