modified:   public/index.html

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
             <option value="Odia">Odia</option>
             <option value="Punjabi">Punjabi</option>
         </select>
-        <button type="button-language" id="select-language" style="margin-top: 1%;">Proceed</button>
+        <button type="button-language" id="select-language">Proceed</button>
     </div>
     <div class="login-container hidden" id="login-container">
         <h2 style="background-color: beige; width:100% ">नमस्ते</h2>       
