Changes to be committed: 	modified:   public/css/style.css 	modified:   public/index.html

--- a/public/index.html
+++ b/public/index.html
@@ -33,10 +33,9 @@
 
                 <input type="text" id="username" class="login-input" autocomplete="off" placeholder="Voter ID" style="margin-top: 10%;" required>
             </div>
-            <div class="password-container">
-                <input type="password" id="password" autocomplete="off" placeholder="Password" required>
-                <input type="checkbox" id="show-password" onclick="myFunction()">
-                <label for="show-password">Show Password</label>
+            <div class="input-group">
+                <input type="password" id="password" autocomplete="off" placeholder="Password" required >
+                <input type="checkbox" onclick="myFunction()" placeholder="show password">
             </div>
             
                 <button type="submit">Enter</button>
