--- a/public/final.html
+++ b/public/final.html
@@ -14,7 +14,7 @@
         <p style="text-align: center; font-size: 1rem;">Your feedback helps us improve. Have a great day!</p>
     </div>
 
-    <canvas id="dotCanvas" style="z-index: -1; display:block; position: fixed; user-select: none; background-color: bisque;"></canvas>
+    <canvas id="dotCanvas" style="z-index: -1; display:block; position: fixed; user-select: none; background-color: beige;"></canvas>
     <script src="scripts/canvas.js"></script>
     <script>
         history.pushState(null, null, window.location.href);
