modified:   public/final.html

--- a/public/final.html
+++ b/public/final.html
@@ -6,7 +6,7 @@
     <title>Thank You</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body style="font-family: 'Courier New', Courier, monospace; background-color: bisque;">
+<body style="font-family: 'Courier New', Courier, monospace; background-color: beige;">
 
     <div class="thankyou-container">
         <h2 style="background-color: beige; width:100%; text-align: center;">धन्यवाद!</h2>
