modified:   public/final.html

--- a/public/final.html
+++ b/public/final.html
@@ -9,9 +9,9 @@
 <body style="font-family: 'Courier New', Courier, monospace; background-color: beige;">
 
     <div class="thankyou-container">
-        <h2 style="background-color: beige; width:100%; text-align: center;">धन्यवाद!</h2>
-        <p style="text-align: center; margin: 20px 0; font-size: 1.2rem;">Thank you for voting. Your response has been recorded successfully.</p>
-        <p style="text-align: center; font-size: 1rem;">Your feedback helps us improve. Have a great day!</p>
+        <h2 style="background-color: bisque; width:100%; text-align: center;">धन्यवाद!</h2>
+        <p style="text-align: center;background-color: bisque; margin: 20px 0; font-size: 1.2rem;">Thank you for voting. Your response has been recorded successfully.</p>
+        <p style="text-align: center;background-color: bisque; font-size: 1rem;">Your feedback helps us improve. Have a great day!</p>
     </div>
 
     <canvas id="dotCanvas" style="z-index: -1; display:block; position: fixed; user-select: none; background-color: beige;"></canvas>
