Changes to be committed: 	modified:   public/vote.html

--- a/public/vote.html
+++ b/public/vote.html
@@ -171,7 +171,7 @@
         </form>
     </div>
     <canvas id="dotCanvas" style="z-index: -1; display:block;position: fixed; user-select: none; background-color: beige;"></canvas>
-    <script src="canvas.js"></script>
+    <script src="scripts/canvas.js"></script>
     <script src="scripts/vote.js" defer></script>
 </body>
 </html>
