--- a/public/admin.html
+++ b/public/admin.html
@@ -12,7 +12,7 @@
         <h2>Admin Panel</h2>
 
         <!-- Add Candidate Form -->
-        <div class="form-container">
+        <div class="form-container" style="background-color: rgba(0, 0, 0, 0.404);">
             <form id="add-candidate-form">
                 <input type="text" id="candidate-name" placeholder="Candidate Name" required>
                 <input type="file" id="candidate-symbol" accept="image/*" required>
