--- a/public/admin.html
+++ b/public/admin.html
@@ -8,11 +8,11 @@
 </head>
 <body>
 
-    <div class="admin-container">
+    <div class="admin-container" style="background-color: rgba(0, 0, 0, 0.404);">
         <h2>Admin Panel</h2>
 
         <!-- Add Candidate Form -->
-        <div class="form-container" style="background-color: rgba(0, 0, 0, 0.404);">
+        <div class="form-container" >
             <form id="add-candidate-form">
                 <input type="text" id="candidate-name" placeholder="Candidate Name" required>
                 <input type="file" id="candidate-symbol" accept="image/*" required>
